js updates with the latest 5 pings

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,10 +19,22 @@
 
   <div id='ping'>
     <table id="table" class="hidden">
+      <thead>
       <tr>
           <th>time</th>
           <th>ip</th>
       </tr>
+    </thead>
+    <tbody id="table_body">
+      <tr>
+        <td>1:23</td>
+        <td>1.2.3.4</td>
+      </tr>
+      <tr>
+        <td>3:23</td>
+        <td>8.2.3.4</td>
+      </tr>
+    </tbody>
   </table>
   </div>
   <div id='root'>
