ping feature works, functionality complete. todo: css

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="icon" href="data:,">
     <!-- Bootstrap CSS from getbootstrap.com -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     
@@ -12,7 +13,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
    
     <!-- Our custom styles -->
-    <link rel="stylesheet" href="/static/mystyles.css">
+
+    <link rel="stylesheet" type="text/css" href="/static/mystyles.css">
     <!-- React dependencies -->
     <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js" crossorigin></script>
@@ -26,6 +28,8 @@
     {% block head %}{% endblock %}
   </head>
   <body>
+    <div class="bg"></div>
+
     <!-- {% for msg in get_flashed_messages() %}
     <p class="flash-msg">
       {{ msg }}
