--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Movie Ratings Home{% endblock %}
+{% block title %}Hackers Toolkit{% endblock %}
 
 {% block body %}
   <title>Dashboard</title>
