--- a/static/mystyles.css
+++ b/static/mystyles.css
@@ -62,7 +62,7 @@ body { background: url(img/bg.jpg);
 
   body,html {
     background-image: url('https://i.imgur.com/xhiRfL6.jpg');
-    height: 100%;
+    height: 100vh;
 }
 
 #profile-img {
