can register user, can login, fixed flash messages

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -75,6 +75,16 @@
     </tbody>
   </table>
   </div>
+
+
+  <div>
+    <form action='/logout'>
+        <p>
+        <input type="submit" name="logout" value="log out" >
+        </p>
+    </form>
+  </div>
+
   <div id='root'>
     
   </div>
