search report by url function works

--- a/static/mystyles.css
+++ b/static/mystyles.css
@@ -22,6 +22,12 @@ body { background: url(img/bg.jpg);
     font-family: "Courier New", Courier, monospace;
     font-size: 20px;
 }
+
+
+
+
+
+
 #ping {
     margin: auto;
     
@@ -85,3 +91,13 @@ body { background: url(img/bg.jpg);
 .h-80 {
     height: 80% !important;
 }
+
+
+
+
+
+
+/* NAVBAR */
+
+
+
