--- a/templates/reports.html
+++ b/templates/reports.html
@@ -8,17 +8,39 @@
 <h2>Reports</h2>
 
 
+<div class='col-sm-3 col-offset-1 blog-sedebar'>
+    <div class="sidebar-module sidebar-module-inset">
+        <h4>Search</h4>
+        <form class='form-inline' method="GET" action="search">
+            <div class="form-group">
+                <label for='query'>URL</label>
+                <input type="text" class='form-control' name="query" id='query'>
+            </div>
+            <button type="submit" class="btm btm-primary">Search</button>
+        </form>
+    </div>
+</div>
+
+
+
+<button id="dashboard" class="float-left submit-button" >Dashboard</button>
 
 <div class="w-50 panel panel-default justify-content-center"" id='reports'>
-    {% for report in reports %}
-    <table id="table" class="table table-dark" >
-      <tr><th>URL</th><td id="vuln_url">{{ report.url }}</td></tr>
-      <tr><th>Is Vulnerable</th><td id="is_vulnerable">{{ report.is_vulnerable }}</td></tr>
-      <tr><th>Successful Payload</th><td id="exploit">{{ report.exploit }}</td></tr>
-      <tr><th>Vulnerable Field Name Tag</th><td id="vuln_field">{{ report.field_name }}</td></tr>
-      <tr><th>Vulnerable Form Type</th><td id="vuln_form_type">{{ report.form_type }}</td></tr>
-      <tr><th>Method</th><td id="method">{{ report.method }}</td></tr>
-      {% endfor %} 
+    {% if reports == None %}
+        <h3>None</h3>
+    {% else %}
+        {% for report in reports %}
+        <table id="table" class="table table-dark" >
+        <tr><th>URL</th><td id="vuln_url">{{ report.url }}</td></tr>
+        <tr><th>Is Vulnerable</th><td id="is_vulnerable">{{ report.is_vulnerable }}</td></tr>
+        <tr><th>Successful Payload</th><td id="exploit">{{ report.exploit }}</td></tr>
+        <tr><th>Vulnerable Field Name Tag</th><td id="vuln_field">{{ report.field_name }}</td></tr>
+        <tr><th>Vulnerable Form Type</th><td id="vuln_form_type">{{ report.form_type }}</td></tr>
+        <tr><th>Method</th><td id="method">{{ report.method }}</td></tr>
+        {% endfor %} 
+    {% endif %}
+
+
       <!-- <tr><th>filed name</th><td id="field_name">data</td></tr> -->
 
   </table>
