fixed error if search field is empty or none

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -14,7 +14,7 @@
         <form class='form-inline' method="GET" action="search">
             <div class="form-group">
                 <label for='query'>URL</label>
-                <input type="text" class='form-control' name="query" id='query'>
+                <input type="text" class='form-control' name="query" id='query' required>
             </div>
             <button type="submit" class="btm btm-primary">Search</button>
         </form>
