save reports locally function added

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -4,7 +4,41 @@
 {% block body %}
 
 <title>Reports</title>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
 <h2>Reports</h2>
 
 
@@ -21,13 +55,25 @@
     </div>
 </div>
 
+<!-- <button id="download" class="float-left submit-button" >Download</button> -->
+
+<div id="export">
+    <form action='/export'>
+        <p>
+        <input type="submit" name="export" value="export" >
+        </p>
+    </form>
+  </div>
+
+
 
 
 <button id="dashboard" class="float-left submit-button" >Dashboard</button>
 
+
 <div class="w-50 panel panel-default justify-content-center"" id='reports'>
-    {% if reports == None %}
-        <h3>None</h3>
+    {% if reports == None or reports == [] %}
+        <h3>No reports for this URL</h3>
     {% else %}
         {% for report in reports %}
         <table id="table" class="table table-dark" >
