--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,21 +1,30 @@
 {% extends 'base.html' %}
-{% block title %}Hackers Toolkit{% endblock %}
+{% block title %}Hacker Toolkit{% endblock %}
 
 {% block body %}
 
 <title>Reports</title>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container"></div>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark ">
+    
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto" >
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Dashboard <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <form action='/logout'>
+        <li class="nav-item active">
+            <a class="nav-link" >Logout <span class="sr-only">(current)</span></a>
+          </li>
+          </form>
+
+
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item dropdown">
@@ -31,31 +40,26 @@
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+        </li> -->
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+
+      <!-- #search -->
+      <form class="form-inline my-2 my-lg-0" method="GET" action="search">
+        <div class="form-group">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="query" id='query' required>
+        </div>
+        <button class="btn btn-outline-success my-2 my-sm-0 btm btm-primary" type="submit">Search</button>
       </form>
+
+
     </div>
+
   </nav>
+</div>
 <h2>Reports</h2>
 
 
-<div class='col-sm-3 col-offset-1 blog-sedebar'>
-    <div class="sidebar-module sidebar-module-inset">
-        <h4>Search</h4>
-        <form class='form-inline' method="GET" action="search">
-            <div class="form-group">
-                <label for='query'>URL</label>
-                <input type="text" class='form-control' name="query" id='query' required>
-            </div>
-            <button type="submit" class="btm btm-primary">Search</button>
-        </form>
-    </div>
-</div>
 
-<!-- <button id="download" class="float-left submit-button" >Download</button> -->
 
 <div id="export">
     <form action='/export'>
@@ -71,9 +75,9 @@
 <button id="dashboard" class="float-left submit-button" >Dashboard</button>
 
 
-<div class="w-50 panel panel-default justify-content-center"" id='reports'>
+<div class="w-50 panel panel-default justify-content-center" id='reports'>
     {% if reports == None or reports == [] %}
-        <h3>No reports for this URL</h3>
+        <h3>No reports found for this URL</h3>
     {% else %}
         {% for report in reports %}
         <table id="table" class="table table-dark" >
