--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -132,6 +132,27 @@
   <div id='root'>
     
   </div>
+  <!-- Footer -->
+  <footer class="page-footer font-small blue bg-dark" id='footer'>
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3 display: inline-block">© 2020 Copyright:
+      <a href="https://github.com/pressstart101"> kali null</a>
+
+
+
+
+    <form class=" my-2 my-lg-0" method="GET" action="mailto:gitnull@protonmail.com" id="contact">
+        <button class="btn btn-outline-success my-2 my-sm-0 btm btm-primary  method="GET" type="submit">Contact</button>
+    </form>
+
+
+      
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
   {% endblock %}
 
 
