download json feature fixed

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -58,21 +58,15 @@
 </div>
 <h2>Reports</h2>
 
-
-
-
 <div id="export">
-    <form action='/export'>
-        <p>
-        <input type="submit" name="export" value="export" >
-        </p>
-    </form>
-  </div>
+    <a href = '/export' download="reports.json"><button class="btn btn-outline-success my-2 my-sm-0 btm btm-primary">export to json</button></a>
+    
+</div>
 
 
 
 
-<button id="dashboard" class="float-left submit-button" >Dashboard</button>
+
 
 
 <div class="w-50 panel panel-default justify-content-center" id='reports'>
@@ -97,7 +91,7 @@
   </div>
 
 <!-- Footer -->
-    <footer class="page-footer font-small blue bg-dark" id='footer_reports'>
+    <footer class="page-footer font-small blue bg-dark" id='footer-reports'>
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 display: inline-block">© 2020 Copyright:
