--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,35 +11,26 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto" id='test'>
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/reports">Reports <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+
+        <form class=ml-auto id="logout" action='/logout'>
+          <li class="nav-item active ">
+               <button class="btn nav-link " type="submit" id='logout'>Logout</button>
+          </li>
+          </form>
+        
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+
     </div>
   </nav>
 </div>
+
+
+
+
 
 
     <h1>Dashboard</h1>
@@ -121,13 +112,7 @@
   </div>
 
 
-  <div id="logout">
-    <form action='/logout'>
-        <p>
-        <input type="submit" name="logout" value="log out" >
-        </p>
-    </form>
-  </div>
+
 
   <div id='root'>
     
