--- a/templates/login.html
+++ b/templates/login.html
@@ -14,8 +14,8 @@
                     <input type="email" name="email" id="inputEmail" class="form-control form-group" placeholder="email" required autofocus>
                     <input type="password" name="password" id="inputPassword" class="form-control form-group" placeholder="password" required autofocus>
 
-                    <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">enter</button>
-                    <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit" formaction="/users">register</button>
+                    <button class="btn btn-lg btn-primary btn-block btn-signin" id="enter" type="submit">enter</button>
+                    <button class="btn btn-lg btn-primary btn-block btn-signin" id="register" type="submit" formaction="/users">register</button>
 
                 </form><!-- /form -->
                 <ul>
