fixed save report feature, added btcticker, added ulr encoding feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,13 @@
   
     <div class="bg"></div>
 
+    <!-- <ul>
+      <p>flash</p>
+      {% for message in get_flashed_messages() %}
+        <li>{{ message }}</li>
+      {% endfor %}
+    </ul> -->
+
     <!-- {% for msg in get_flashed_messages() %}
     <p class="flash-msg">
       {{ msg }}
