--- a/static/mystyles.css
+++ b/static/mystyles.css
@@ -132,7 +132,7 @@ h2 {
 .nav-link{
     color: green !important;
     font-weight: bold;
-    font-size: 3vh;
+    font-size: 20px;
 }
 
 #navigation {
@@ -197,7 +197,8 @@ h2 {
 #url_form {
     text-align: center;
     vertical-align: middle;
-    margin-bottom: 80px;
+    margin-bottom: 30px;
+    margin-top: 40px;
     
 }
 
@@ -222,3 +223,79 @@ h2 {
     background-color: rgb(4,93,136);
     border-color: green;
 }
+
+label {display:block;}
+textarea { display:block;}
+
+
+#urlcode {
+    opacity: 0.9;
+    position: fixed;
+    top: 20vh;
+    left: 5vh;
+}
+
+textarea {
+    background-color: #ced4da; 
+    border-radius: 10px; 
+    padding: 10px;
+}
+
+select {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(47,52,57) !important;
+    color: green;
+    border-color: rgb(47,52,57);
+    border-radius: 10px;
+    
+
+}
+
+
+
+  select:checked {
+    outline: none
+  }
+
+select:hover  {
+    outline: none
+  }
+select:focus  {
+    outline: none
+  }
+select:active  {
+    outline: none
+  }
+select:checked  {
+    outline: none
+  } 
+
+#urlcode_button{
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
+}
+
+
+#wrapper {
+    font-size: 1em;
+    font-family: "Courier New", Courier, monospace;
+    margin: 1px auto;
+
+    color: green;
+    text-align: center;
+    right: 1px !important;
+    font-weight: bold;
+  }
+
+  #btc {
+
+      font-size: 1em;
+      font-family: "Courier New", Courier, monospace;
+
+  
+      color: green;
+      text-align: center;
+      font-weight: bold;
+  }
+  
