--- a/templates/base.html
+++ b/templates/base.html
@@ -31,14 +31,9 @@
   
     <div class="bg"></div>
 
-    <!-- <ul>
-      <p>flash</p>
-      {% for message in get_flashed_messages() %}
-        <li>{{ message }}</li>
-      {% endfor %}
-    </ul> -->
 
-    <!-- {% for msg in get_flashed_messages() %}
+<!-- 
+    {% for msg in get_flashed_messages() %}
     <p class="flash-msg">
       {{ msg }}
     </p>
@@ -50,3 +45,4 @@
     <script src="/static/js/dash.js" type="text/jsx"></script>
   </body>
 </html>
+
