--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -72,12 +72,12 @@
    </div>
 
 
-
       <form id="url_form">
+
         <label form="url">Enter URL to scan for XSS:</label>
         <input type="text" id="url" name="url" placeholder="URL to scan for XSS"><br><br>
         <button class="btn btn-outline-success my-4 my-sm-0 btm btm-primary" type="submit" id="scan">Scan</button>
-        <button class="btn btn-outline-success my-4 my-sm-0 btm btm-primary"id="save_report"  type="submit" formaction="/save_report">Save Report</button>
+        <button class="btn btn-outline-success my-2 my-sm-0 btm btm-primary"id="save_report"  type="submit" formaction="/save_report">Save Report</button>
 
         <!-- <input type="submit" value="Save Report" formaction="/reports"> -->
       </form>
@@ -122,7 +122,7 @@
 
   <div class=" w-25 table table-dark panel panel-default justify-content-center text-center" id="notvuln" style="display:none">
     <table id="table" >
-      <tr><th>Not Vulnerable to Cross Site Scripting</th></tr>
+      <tr><th>No Cross Site Scripting Found</th></tr>
   
   </table>
   </div>
@@ -163,10 +163,6 @@
 </form>
 </div>
 
-
-  <div id='root'>
-    
-  </div>
   <!-- Footer -->
   <footer class="page-footer font-small blue bg-dark" id='footer'>
 
