--- a/templates/login.html
+++ b/templates/login.html
@@ -13,9 +13,9 @@
   {% endwith %}
 </div>
 <div class="container h-80" >
-    <div class="row align-items-center h-100">
-        <div class="col-3 mx-auto">
-            <div class="text-center" id="creds">
+    <div class="row align-items-center h-100" id="creds">
+        <div class="col-3 mx-auto" >
+            <div class="text-center" >
 
                 <img id="profile-img" class="rounded-circle profile-img-card" src="https://i.imgur.com/6b6psnA.png" />
                 <p id="profile-name" class="profile-name-card"></p>
