--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -173,9 +173,9 @@
 
 
 
-    <form class=" my-2 my-lg-0" method="GET" action="mailto:gitnull@protonmail.com" id="contact">
+    <!-- <form class=" my-2 my-lg-0" method="GET" action="mailto:gitnull@protonmail.com" id="contact">
         <button class="btn btn-outline-success my-2 my-sm-0 btm btm-primary  method="GET" type="submit">Contact</button>
-    </form>
+    </form> -->
 
 
       
